showing one instance of each string

--- a/index.css
+++ b/index.css
@@ -43,4 +43,13 @@
   overflow: visible !important;
   height: auto !important;
   width: auto !important;
+  border: 1px solid green;
+
+}
+
+#menuElement {
+  border: 1px solid black;
+  height: 100px;
+  margin-top: 50px;
+  width: 75%;
 }
