--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 /* need to control for window size */
-.save_button_field {
+/*.save_button_field {
     width: 5%;
     float: right;
     z-index: 2;
@@ -7,23 +7,45 @@
 
 #save_button {
   position: relative;
+}*/
+
+.content-filler {
+  height: 30px;
+  position: relative;
+  /*background: #D3D3D3;*/
+  /*opacity: .4;*/
+  margin: -5px auto -5 auto;
+  padding-bottom: 5px;
+  display: flex;
+  flex-direction: row;
 }
 
 #save_image {
-  height: 75%;
-  width: 75%;
+  height: 50%;
+  width: 50%;
 }
 
 #remove_image {
+  height: 20%;
+  width: 20%;
+  float: left;
+  margin-left: 10px;
+}
+
+#menu_element {
+  width: 80%;
+}
+
+/*#remove_image {
   height: 15%;
   width: auto;
   position: absolute;
   bottom: 50px;
   padding-left: 10px;
-}
+}*/
 
 
-.input--textarea-clear {
+/*.input--textarea-clear {
   position: absolute;
   width: 90%;
 }
@@ -35,13 +57,13 @@
 .content_button_field {
   width: 5%;
   float: left;
-}
+}*/
 
-#content_image {
-  padding-top: 5px;
-  position: relative;
-  height: 45%;
-  width: 45%;
+/*#content_image {*/
+  /*padding-top: 5px;*/
+  /*position: relative;
+  height: 30%;
+  width: 30%;
 }
 
 #menuElement {
@@ -54,12 +76,4 @@
 
 #js--admin-txt-input {
   width: 80%
-}
-
-.content-filler {
-  height: 30px;
-  position: relative;
-  background: gray;
-  opacity: .4;
-  margin: -5px auto -5 auto;
-}
+}*/
